--- a/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
@@ -1,18 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1080.0" scaleShape="false" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLMainMenuSceneController">
+   <children>
+      <HBox prefHeight="600.0" prefWidth="1080.0">
          <children>
-            <Button mnemonicParsing="false" text="Search" />
-            <Button mnemonicParsing="false" text="Configurations" />
-            <Button mnemonicParsing="false" text="Credits" />
+            <VBox alignment="CENTER" prefHeight="600.0" prefWidth="480.0">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="237.0" text="Gép összeállítása" textOverrun="CLIP">
+                     <padding>
+                        <Insets bottom="25.0" left="50.0" right="50.0" top="25.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="132.0" layoutY="202.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="237.0" text="Konfigurációk" textOverrun="CLIP">
+                     <padding>
+                        <Insets bottom="25.0" left="50.0" right="50.0" top="25.0" />
+                     </padding>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button layoutX="432.0" layoutY="356.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="237.0" text="Credits" textOverrun="CLIP">
+                     <padding>
+                        <Insets bottom="15.0" left="90.0" right="90.0" top="15.0" />
+                     </padding>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button layoutX="524.0" layoutY="310.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="237.0" text="Kilépés" textOverrun="CLIP">
+                     <padding>
+                        <Insets bottom="15.0" left="90.0" right="90.0" top="15.0" />
+                     </padding>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+            </VBox>
+            <VBox prefHeight="600.0" prefWidth="600.0">
+               <children>
+                  <ImageView fitHeight="293.0" fitWidth="481.0" pickOnBounds="true" preserveRatio="true" x="295.0">
+                     <image>
+                        <Image url="@../../../../assets/logo2.png" />
+                     </image>
+                     <VBox.margin>
+                        <Insets top="80.0" />
+                     </VBox.margin>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="124.0" prefWidth="462.0" text="Göter" textFill="#f1b149" textOverrun="CLIP">
+                     <font>
+                        <Font size="86.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
          </children>
-      </VBox>
-   </center>
-</BorderPane>
+      </HBox>
+   </children>
+</Pane>
