--- a/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
@@ -11,18 +11,18 @@
 <?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLMainMenuSceneController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1080.0" stylesheets="@../styles/mainMenuStyles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLMainMenuSceneController">
    <children>
       <HBox prefHeight="600.0" prefWidth="1080.0">
          <children>
             <VBox alignment="CENTER" prefHeight="600.0" prefWidth="480.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="237.0" text="Gép összeállítása" textOverrun="CLIP">
+                  <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="237.0" styleClass="mainMenuButton" text="Gép összeállítása" textOverrun="CLIP">
                      <padding>
                         <Insets bottom="25.0" left="50.0" right="50.0" top="25.0" />
                      </padding>
                      <VBox.margin>
-                        <Insets bottom="10.0" />
+                        <Insets bottom="5.0" />
                      </VBox.margin>
                      <font>
                         <Font size="18.0" />
@@ -36,7 +36,7 @@
                         <Font size="18.0" />
                      </font>
                      <VBox.margin>
-                        <Insets bottom="10.0" />
+                        <Insets bottom="5.0" />
                      </VBox.margin>
                   </Button>
                   <Button layoutX="432.0" layoutY="356.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="237.0" text="Credits" textOverrun="CLIP">
@@ -47,7 +47,7 @@
                         <Font size="18.0" />
                      </font>
                      <VBox.margin>
-                        <Insets bottom="10.0" />
+                        <Insets bottom="5.0" />
                      </VBox.margin>
                   </Button>
                   <Button layoutX="524.0" layoutY="310.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="237.0" text="Kilépés" textOverrun="CLIP">
@@ -70,7 +70,7 @@
                         <Insets top="80.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Label alignment="CENTER" prefHeight="124.0" prefWidth="462.0" text="Göter" textFill="#f1b149" textOverrun="CLIP">
+                  <Label alignment="CENTER" prefHeight="33.0" prefWidth="462.0" text="Göter" textFill="#f1b149" textOverrun="CLIP">
                      <font>
                         <Font size="86.0" />
                      </font>
