További css + Kilépés gomb és Komponens keresés gomb működik

--- a/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
@@ -10,14 +10,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1080.0" stylesheets="@../styles/mainMenuStyles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLMainMenuSceneController">
+<Pane fx:id="mainMenuScenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1080.0" stylesheets="@../styles/mainMenuStyles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.control.FXMLMainMenuSceneController">
    <children>
       <HBox prefHeight="600.0" prefWidth="1080.0">
          <children>
             <VBox alignment="CENTER" prefHeight="600.0" prefWidth="480.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="237.0" styleClass="mainMenuButton" text="Gép összeállítása" textOverrun="CLIP">
+                  <Button mnemonicParsing="false" onMouseClicked="#handleMakeAConfigButtonClicked" prefHeight="77.0" prefWidth="237.0" styleClass="mainMenuButton" text="Gép összeállítása" textOverrun="CLIP">
                      <padding>
                         <Insets bottom="25.0" left="50.0" right="50.0" top="25.0" />
                      </padding>
@@ -32,9 +31,6 @@
                      <padding>
                         <Insets bottom="25.0" left="50.0" right="50.0" top="25.0" />
                      </padding>
-                     <font>
-                        <Font size="18.0" />
-                     </font>
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin>
@@ -50,7 +46,7 @@
                         <Insets bottom="5.0" />
                      </VBox.margin>
                   </Button>
-                  <Button layoutX="524.0" layoutY="310.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="237.0" text="Kilépés" textOverrun="CLIP">
+                  <Button layoutX="524.0" layoutY="310.0" mnemonicParsing="false" onMouseClicked="#handleExitButtonClicked" prefHeight="58.0" prefWidth="237.0" text="Kilépés" textOverrun="CLIP">
                      <padding>
                         <Insets bottom="15.0" left="90.0" right="90.0" top="15.0" />
                      </padding>
@@ -63,12 +59,12 @@
             <VBox prefHeight="600.0" prefWidth="600.0">
                <children>
                   <ImageView fitHeight="293.0" fitWidth="481.0" pickOnBounds="true" preserveRatio="true" x="295.0">
-                     <image>
-                        <Image url="@../../../../assets/logo2.png" />
-                     </image>
                      <VBox.margin>
                         <Insets top="80.0" />
                      </VBox.margin>
+                     <image>
+                        <Image url="@assets/logo2.png" />
+                     </image>
                   </ImageView>
                   <Label alignment="CENTER" prefHeight="33.0" prefWidth="462.0" text="Göter" textFill="#f1b149" textOverrun="CLIP">
                      <font>
