--- a/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <Pane fx:id="mainMenuScenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1080.0" stylesheets="@../styles/mainMenuStyles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.control.FXMLMainMenuSceneController">
    <children>
@@ -27,7 +28,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="132.0" layoutY="202.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="237.0" text="Konfigurációk" textOverrun="CLIP">
+                  <Button layoutX="132.0" layoutY="202.0" mnemonicParsing="false" onMouseClicked="#handleConfigsButtonClicked" prefHeight="77.0" prefWidth="237.0" text="Konfigurációk" textOverrun="CLIP">
                      <padding>
                         <Insets bottom="25.0" left="50.0" right="50.0" top="25.0" />
                      </padding>
@@ -35,7 +36,7 @@
                         <Insets bottom="5.0" />
                      </VBox.margin>
                   </Button>
-                  <Button layoutX="432.0" layoutY="356.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="237.0" text="Credits" textOverrun="CLIP">
+                  <Button layoutX="432.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#handleCreditsButtonClicked" prefHeight="58.0" prefWidth="237.0" text="Credits" textOverrun="CLIP">
                      <padding>
                         <Insets bottom="15.0" left="90.0" right="90.0" top="15.0" />
                      </padding>
@@ -75,5 +76,34 @@
             </VBox>
          </children>
       </HBox>
+      <Pane fx:id="creditsPane" layoutX="50.0" layoutY="90.0" prefHeight="410.0" prefWidth="380.0" visible="false">
+         <children>
+            <VBox alignment="BOTTOM_LEFT" prefHeight="410.0" prefWidth="380.0" styleClass="creditsClass">
+               <children>
+                  <Label alignment="CENTER" prefHeight="30.0" prefWidth="466.0" text="Credits">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="to do" wrappingWidth="276.3236389160156">
+                     <VBox.margin>
+                        <Insets bottom="250.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Button mnemonicParsing="false" onMouseClicked="#handleCreditsBackButtonPressed" text="Vissza">
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="300.0" right="10.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+         </children>
+      </Pane>
    </children>
 </Pane>
