Actual config fájlok törölve és Alert-ek elkészítve

--- a/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
@@ -362,12 +362,12 @@
                                           <Insets />
                                        </HBox.margin>
                                     </Label>
-                                    <TextField>
+                                    <TextField fx:id="configNameTextField">
                                        <HBox.margin>
                                           <Insets />
                                        </HBox.margin>
                                     </TextField>
-                                    <Button mnemonicParsing="false" text="Mentés">
+                                    <Button mnemonicParsing="false" onMouseClicked="#handleSaveActualConfigButtonClicked" text="Mentés">
                                        <HBox.margin>
                                           <Insets left="410.0" />
                                        </HBox.margin>
