--- a/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
@@ -388,15 +388,15 @@
                      <content>
                         <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <TableView nodeOrientation="LEFT_TO_RIGHT" prefHeight="515.0" prefWidth="750.0">
+                              <TableView fx:id="configTableView" nodeOrientation="LEFT_TO_RIGHT" prefHeight="515.0" prefWidth="750.0">
                                  <columns>
-                                    <TableColumn prefWidth="123.20001068115243" text="Konfiguráció neve" />
-                                    <TableColumn prefWidth="122.4001235961914" text="Processzor" />
-                                    <TableColumn prefWidth="110.39990234375" text="Alaplap" />
-                                    <TableColumn prefWidth="125.066650390625" text="Tápegység" />
-                                    <TableColumn prefWidth="96.00003051757812" text="Memória" />
-                                    <TableColumn prefWidth="109.59991455078125" text="HDD" />
-                                    <TableColumn prefWidth="65.066650390625" text="Ár" />
+                                    <TableColumn fx:id="configNameTableColumn" prefWidth="123.20001068115243" text="Konfiguráció neve" />
+                                    <TableColumn fx:id="configProcessorTableColumn" prefWidth="122.4001235961914" text="Processzor" />
+                                    <TableColumn fx:id="configMotherboardTableColumn" prefWidth="110.39990234375" text="Alaplap" />
+                                    <TableColumn fx:id="configPowerSupplyTableColumn" prefWidth="125.066650390625" text="Tápegység" />
+                                    <TableColumn fx:id="configMemoryTableColumn" prefWidth="96.00003051757812" text="Memória" />
+                                    <TableColumn fx:id="configHardDriveDiskTableColumn" prefWidth="109.59991455078125" text="HDD" />
+                                    <TableColumn fx:id="configPriceTableColumn" prefWidth="65.066650390625" text="Ár" />
                                  </columns>
                               </TableView>
                               <Button mnemonicParsing="false" text="Konfiguráció törlése">
