--- a/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
@@ -105,21 +105,21 @@
                            <children>
                               <TableView fx:id="productTableView" prefHeight="515.0" prefWidth="750.0">
                                 <columns>
-                                  <TableColumn fx:id="brandTableColumn" prefWidth="145.59992063045502" text="Brand" visible="false" />
-                                    <TableColumn fx:id="seriesTableColumn" prefWidth="92.26669311523438" text="Series" visible="false" />
-                                    <TableColumn fx:id="modelTableColumn" prefWidth="77.86663818359375" text="Model" visible="false" />
-                                    <TableColumn fx:id="priceTableColumn" prefWidth="64.00006103515625" text="Price" visible="false" />
-                                    <TableColumn fx:id="frequencyTableColumn" prefWidth="35.199951171875" text="Frequency" visible="false" />
-                                    <TableColumn fx:id="numOfCoresTableColumn" prefWidth="42.4000244140625" text="Num. of cores" visible="false" />
-                                    <TableColumn fx:id="powerTableColumn" prefWidth="50.39996337890625" text="Power" visible="false" />
-                                    <TableColumn fx:id="capacityTableColumn" prefWidth="66.13333129882812" text="Capacity" visible="false" />
-                                    <TableColumn fx:id="energyEfficiencyTableColumn" prefWidth="81.06658935546875" text="Energy efficiency" visible="false" />
-                                    <TableColumn fx:id="socketTypeTableColumn" prefWidth="111.73345947265625" text="Socket type" visible="false" />
-                                    <TableColumn fx:id="integratedGPUTableColumn" prefWidth="75.0" text="Integrated GPU" visible="false" />
-                                    <TableColumn fx:id="speedTableColumn" prefWidth="75.0" text="Speed" visible="false" />
-                                    <TableColumn fx:id="formFactorTableColumn" prefWidth="75.0" text="FormFactor" visible="false" />
-                                    <TableColumn fx:id="numOfRAMSocketsTableColumn" prefWidth="75.0" text="Num. of RAM sockets" visible="false" />
-                                    <TableColumn fx:id="numOfModulesTableColumn" prefWidth="75.0" text="Num. of Modules" visible="false" />
+                                  <TableColumn fx:id="brandTableColumn" prefWidth="145.59992063045502" text="Gyártó" visible="false" />
+                                    <TableColumn fx:id="seriesTableColumn" prefWidth="92.26669311523438" text="Sorozat" visible="false" />
+                                    <TableColumn fx:id="modelTableColumn" prefWidth="77.86663818359375" text="Modell" visible="false" />
+                                    <TableColumn fx:id="priceTableColumn" prefWidth="64.00006103515625" text="Ár" visible="false" />
+                                    <TableColumn fx:id="frequencyTableColumn" prefWidth="35.199951171875" text="Maximális frekvencia" visible="false" />
+                                    <TableColumn fx:id="numOfCoresTableColumn" prefWidth="42.4000244140625" text="Magok száma" visible="false" />
+                                    <TableColumn fx:id="powerTableColumn" prefWidth="50.39996337890625" text="Fogyasztás" visible="false" />
+                                    <TableColumn fx:id="capacityTableColumn" prefWidth="66.13333129882812" text="Kapacitás" visible="false" />
+                                    <TableColumn fx:id="energyEfficiencyTableColumn" prefWidth="81.06658935546875" text="Effektivitás" visible="false" />
+                                    <TableColumn fx:id="socketTypeTableColumn" prefWidth="111.73345947265625" text="Foglalat típusa" visible="false" />
+                                    <TableColumn fx:id="integratedGPUTableColumn" prefWidth="75.0" text="Integrált GPU" visible="false" />
+                                    <TableColumn fx:id="speedTableColumn" prefWidth="75.0" text="Fordulatszám" visible="false" />
+                                    <TableColumn fx:id="formFactorTableColumn" prefWidth="75.0" text="Form factor" visible="false" />
+                                    <TableColumn fx:id="numOfRAMSocketsTableColumn" prefWidth="75.0" text="RAM foglalatok száma" visible="false" />
+                                    <TableColumn fx:id="numOfModulesTableColumn" prefWidth="75.0" text="Modulok száma" visible="false" />
                                 </columns>
                               </TableView>
                               <Button mnemonicParsing="false" onMouseClicked="#handleAddComponentButtonClicked" text="Komponens hozzáadása">
@@ -159,15 +159,15 @@
                                  <children>
                                     <TableView fx:id="actualProcessorTable" focusTraversable="false" mouseTransparent="true" prefHeight="35.0" prefWidth="640.0" visible="false">
                                        <columns>
-                                          <TableColumn fx:id="processorBrandTableColumn" prefWidth="60.266661047935486" text="Brand" />
-                                          <TableColumn fx:id="processorSeriesTableColumn" prefWidth="73.0666275024414" text="Series" />
-                                          <TableColumn fx:id="processorModelTableColumn" prefWidth="62.9332275390625" text="Model" />
-                                          <TableColumn fx:id="processorFrequencyTableColumn" prefWidth="47.20001220703125" text="Frequency" />
-                                          <TableColumn fx:id="processorNumOfCoresTableColumn" prefWidth="50.66668701171875" text="Num. of cores" />
-                                          <TableColumn fx:id="processorPowerTableColumn" prefWidth="71.20001220703125" text="Power" />
-                                          <TableColumn fx:id="processorSocketTypeTableColumn" prefWidth="85.5999755859375" text="Socket type" />
-                                          <TableColumn fx:id="processorIntegratedGPUTableColumn" prefWidth="115.19989013671875" text="Integrated GPU" />
-                                          <TableColumn fx:id="processorPriceTableColumn" prefWidth="48.0" text="Price" />
+                                          <TableColumn fx:id="processorBrandTableColumn" prefWidth="60.266661047935486" text="Gyártó" />
+                                          <TableColumn fx:id="processorSeriesTableColumn" prefWidth="73.0666275024414" text="Sorozat" />
+                                          <TableColumn fx:id="processorModelTableColumn" prefWidth="62.9332275390625" text="Modell" />
+                                          <TableColumn fx:id="processorFrequencyTableColumn" prefWidth="47.20001220703125" text="Frekvencia" />
+                                          <TableColumn fx:id="processorNumOfCoresTableColumn" prefWidth="50.66668701171875" text="Magok száma" />
+                                          <TableColumn fx:id="processorPowerTableColumn" prefWidth="71.20001220703125" text="Fogyasztás" />
+                                          <TableColumn fx:id="processorSocketTypeTableColumn" prefWidth="85.5999755859375" text="Foglalat típusa" />
+                                          <TableColumn fx:id="processorIntegratedGPUTableColumn" prefWidth="115.19989013671875" text="Integrált GPU" />
+                                          <TableColumn fx:id="processorPriceTableColumn" prefWidth="48.0" text="Ár" />
                                        </columns>
                                        <HBox.margin>
                                           <Insets left="10.0" />
@@ -204,11 +204,11 @@
                                  <children>
                                     <TableView fx:id="actualPowerSupplyTable" focusTraversable="false" mouseTransparent="true" prefHeight="35.0" prefWidth="640.0" visible="false">
                                        <columns>
-                                          <TableColumn fx:id="powerSupplyBrandTableColumn" prefWidth="157.33334958553314" text="Brand" />
-                                          <TableColumn fx:id="powerSupplySeriesTableColumn" prefWidth="123.46661376953125" text="Series" />
-                                          <TableColumn fx:id="powerSupplyModelTableColumn" prefWidth="118.4000244140625" text="Model" />
-                                          <TableColumn fx:id="powerSupplyEnergyEfficiencyTableColumn" prefWidth="169.33328247070312" text="Energy efficiency" />
-                                          <TableColumn fx:id="powerSupplyPriceTableColumn" prefWidth="48.0" text="Price" />
+                                          <TableColumn fx:id="powerSupplyBrandTableColumn" prefWidth="157.33334958553314" text="Gyártó" />
+                                          <TableColumn fx:id="powerSupplySeriesTableColumn" prefWidth="123.46661376953125" text="Sorozat" />
+                                          <TableColumn fx:id="powerSupplyModelTableColumn" prefWidth="118.4000244140625" text="Modell" />
+                                          <TableColumn fx:id="powerSupplyEnergyEfficiencyTableColumn" prefWidth="169.33328247070312" text="Effektivitás" />
+                                          <TableColumn fx:id="powerSupplyPriceTableColumn" prefWidth="48.0" text="Ár" />
                                        </columns>
                                        <HBox.margin>
                                           <Insets left="10.0" />
@@ -245,13 +245,13 @@
                                  <children>
                                     <TableView fx:id="actualMotherboardTable" focusTraversable="false" mouseTransparent="true" prefHeight="35.0" prefWidth="640.0" visible="false">
                                        <columns>
-                                          <TableColumn fx:id="motherboardBrandTableColumn" prefWidth="132.79999387264252" text="Brand" />
-                                          <TableColumn fx:id="motherboardSeriesTableColumn" prefWidth="105.60003662109375" text="Series" />
-                                          <TableColumn fx:id="motherboardModelTableColumn" prefWidth="80.53338623046875" text="Model" />
-                                          <TableColumn fx:id="motherboardSocketTypeTableColumn" prefWidth="82.1334228515625" text="Socket type" />
-                                          <TableColumn fx:id="motherboardFormFactorTableColumn" prefWidth="91.99993896484375" text="FormFactor" />
-                                          <TableColumn fx:id="motherboardNumOfRAMSocketsTableColumn" prefWidth="74.93331909179688" text="Num. of RAM sockets" />
-                                          <TableColumn fx:id="motherboardPriceTableColumn" prefWidth="48.0" text="Price" />
+                                          <TableColumn fx:id="motherboardBrandTableColumn" prefWidth="132.79999387264252" text="Gyártó" />
+                                          <TableColumn fx:id="motherboardSeriesTableColumn" prefWidth="105.60003662109375" text="Sorozat" />
+                                          <TableColumn fx:id="motherboardModelTableColumn" prefWidth="80.53338623046875" text="Modell" />
+                                          <TableColumn fx:id="motherboardSocketTypeTableColumn" prefWidth="82.1334228515625" text="Foglalat típusa" />
+                                          <TableColumn fx:id="motherboardFormFactorTableColumn" prefWidth="91.99993896484375" text="Form factor" />
+                                          <TableColumn fx:id="motherboardNumOfRAMSocketsTableColumn" prefWidth="74.93331909179688" text="RAM foglalatok száma" />
+                                          <TableColumn fx:id="motherboardPriceTableColumn" prefWidth="48.0" text="Ár" />
                                        </columns>
                                        <HBox.margin>
                                           <Insets left="10.0" />
@@ -288,13 +288,13 @@
                                  <children>
                                     <TableView fx:id="actualMemoryTable" focusTraversable="false" mouseTransparent="true" prefHeight="35.0" prefWidth="640.0" visible="false">
                                        <columns>
-                                          <TableColumn fx:id="memoryBrandTableColumn" prefWidth="145.59992063045502" text="Brand" />
-                                          <TableColumn fx:id="memorySeriesTableColumn" prefWidth="92.26669311523438" text="Series" />
-                                          <TableColumn fx:id="memoryModelTableColumn" prefWidth="107.199951171875" text="Model" />
-                                          <TableColumn fx:id="memoryFrequencyTableColumn" prefWidth="70.13323974609375" text="Frequency" />
-                                          <TableColumn fx:id="memoryCapacityTableColumn" prefWidth="55.733367919921875" text="Capacity" />
-                                          <TableColumn fx:id="memoryNumOfModulesTableColumn" prefWidth="96.80001831054688" text="Num. of Modules" />
-                                          <TableColumn fx:id="memoryPriceTableColumn" prefWidth="48.0" text="Price" />
+                                          <TableColumn fx:id="memoryBrandTableColumn" prefWidth="145.59992063045502" text="Gyártó" />
+                                          <TableColumn fx:id="memorySeriesTableColumn" prefWidth="92.26669311523438" text="Sorozat" />
+                                          <TableColumn fx:id="memoryModelTableColumn" prefWidth="107.199951171875" text="Modell" />
+                                          <TableColumn fx:id="memoryFrequencyTableColumn" prefWidth="70.13323974609375" text="Frekvencia" />
+                                          <TableColumn fx:id="memoryCapacityTableColumn" prefWidth="55.733367919921875" text="Kapacitás" />
+                                          <TableColumn fx:id="memoryNumOfModulesTableColumn" prefWidth="96.80001831054688" text="Modulok száma" />
+                                          <TableColumn fx:id="memoryPriceTableColumn" prefWidth="48.0" text="Ár" />
                                        </columns>
                                        <HBox.margin>
                                           <Insets left="10.0" />
@@ -334,12 +334,12 @@
                                  <children>
                                     <TableView fx:id="actualHardDriveDiskTable" focusTraversable="false" mouseTransparent="true" prefHeight="35.0" prefWidth="640.0" visible="false">
                                        <columns>
-                                          <TableColumn fx:id="hardDriveDiskBrandTableColumn" prefWidth="127.46671140193939" text="Brand" />
-                                          <TableColumn fx:id="hardDriveDiskSeriesTableColumn" prefWidth="104.53326416015625" text="Series" />
-                                          <TableColumn fx:id="hardDriveDiskModelTableColumn" prefWidth="137.8665771484375" text="Model" />
-                                          <TableColumn fx:id="hardDriveDiskCapacityTableColumn" prefWidth="113.066650390625" text="Capacity" />
-                                          <TableColumn fx:id="hardDriveDiskSpeedTableColumn" prefWidth="83.9998779296875" text="Speed" />
-                                          <TableColumn fx:id="hardDriveDiskPriceTableColumn" prefWidth="48.0" text="Price" />
+                                          <TableColumn fx:id="hardDriveDiskBrandTableColumn" prefWidth="127.46671140193939" text="Gyártó" />
+                                          <TableColumn fx:id="hardDriveDiskSeriesTableColumn" prefWidth="104.53326416015625" text="Sorozat" />
+                                          <TableColumn fx:id="hardDriveDiskModelTableColumn" prefWidth="137.8665771484375" text="Modell" />
+                                          <TableColumn fx:id="hardDriveDiskCapacityTableColumn" prefWidth="113.066650390625" text="Kapacitás" />
+                                          <TableColumn fx:id="hardDriveDiskSpeedTableColumn" prefWidth="83.9998779296875" text="Fordulatszám" />
+                                          <TableColumn fx:id="hardDriveDiskPriceTableColumn" prefWidth="48.0" text="Ár" />
                                        </columns>
                                        <HBox.margin>
                                           <Insets left="10.0" />
